Add server support for fetching list of urls, creating new ones, and deleting them again.

--- a/ShortUrlInBackbone/ShortUrlInBackbone.csproj
+++ b/ShortUrlInBackbone/ShortUrlInBackbone.csproj
@@ -78,9 +78,11 @@
     <Content Include="Content\Scripts\jquery-1.7.2.min.js" />
     <Content Include="Content\Scripts\ShortUrl\index.js" />
     <Content Include="Content\Scripts\ShortUrl\mainForm.js" />
-    <Content Include="Content\Scripts\ShortUrl\urlList.js" />
+    <Content Include="Content\Scripts\ShortUrl\urlListView.js" />
     <Content Include="Content\Scripts\underscore.js" />
     <Content Include="Content\Scripts\underscore.min.js" />
+    <Content Include="Content\Scripts\URI.js" />
+    <Content Include="Content\Scripts\ShortUrl\urlListModel.js" />
     <Content Include="Views\Index.html" />
     <Content Include="Web.config" />
   </ItemGroup>
