--- a/ShortUrlInBackbone/ShortUrlInBackbone.csproj
+++ b/ShortUrlInBackbone/ShortUrlInBackbone.csproj
@@ -70,12 +70,15 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\images\glyphicons-halflings-white.png" />
     <Content Include="Content\images\glyphicons-halflings.png" />
+    <Content Include="Content\jasmine\jasmine.css" />
+    <Content Include="Content\jasmine\jasmine_favicon.png" />
     <Content Include="Content\Scripts\backbone.js" />
     <Content Include="Content\Scripts\backbone.min.js" />
     <Content Include="Content\Scripts\bootstrap.js" />
     <Content Include="Content\Scripts\bootstrap.min.js" />
     <Content Include="Content\Scripts\jquery-1.7.2.js" />
     <Content Include="Content\Scripts\jquery-1.7.2.min.js" />
+    <Content Include="Content\Scripts\ShortUrlSpecs\urlModelSpec.js" />
     <Content Include="Content\Scripts\ShortUrl\index.js" />
     <Content Include="Content\Scripts\ShortUrl\mainForm.js" />
     <Content Include="Content\Scripts\ShortUrl\urlListView.js" />
@@ -83,15 +86,24 @@
     <Content Include="Content\Scripts\underscore.min.js" />
     <Content Include="Content\Scripts\URI.js" />
     <Content Include="Content\Scripts\ShortUrl\urlListModel.js" />
+    <Content Include="Content\Scripts\jasmine-samples\Player.js" />
+    <Content Include="Content\Scripts\jasmine-samples\PlayerSpec.js" />
+    <Content Include="Content\Scripts\jasmine-samples\Song.js" />
+    <Content Include="Content\Scripts\jasmine-samples\SpecHelper.js" />
+    <Content Include="Content\Scripts\jasmine\jasmine-html.js" />
+    <Content Include="Content\Scripts\jasmine\jasmine.js" />
     <Content Include="Views\Index.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="HomeModule.cs" />
+    <Compile Include="JasmineModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
+    <Content Include="Views\Jasmine\SpecRunner.html" />
+    <Content Include="Content\Scripts\jasmine\MIT.LICENSE" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
