--- a/ShortUrlInBackbone/ShortUrlInBackbone.csproj
+++ b/ShortUrlInBackbone/ShortUrlInBackbone.csproj
@@ -78,7 +78,7 @@
     <Content Include="Content\Scripts\bootstrap.min.js" />
     <Content Include="Content\Scripts\jquery-1.7.2.js" />
     <Content Include="Content\Scripts\jquery-1.7.2.min.js" />
-    <Content Include="Content\Scripts\ShortUrlSpecs\urlModelSpec.js" />
+    <Content Include="Content\Scripts\ShortUrlSpecs\urlModelIntegrationSpec.js" />
     <Content Include="Content\Scripts\ShortUrl\index.js" />
     <Content Include="Content\Scripts\ShortUrl\mainForm.js" />
     <Content Include="Content\Scripts\ShortUrl\urlListView.js" />
@@ -92,6 +92,7 @@
     <Content Include="Content\Scripts\jasmine-samples\SpecHelper.js" />
     <Content Include="Content\Scripts\jasmine\jasmine-html.js" />
     <Content Include="Content\Scripts\jasmine\jasmine.js" />
+    <Content Include="Content\Scripts\sinon\sinon-1.6.0.js" />
     <Content Include="Views\Index.html" />
     <Content Include="Web.config" />
   </ItemGroup>
