--- a/ShortUrlInBackbone/ShortUrlInBackbone.csproj
+++ b/ShortUrlInBackbone/ShortUrlInBackbone.csproj
@@ -78,6 +78,7 @@
     <Content Include="Content\Scripts\bootstrap.min.js" />
     <Content Include="Content\Scripts\jquery-1.7.2.js" />
     <Content Include="Content\Scripts\jquery-1.7.2.min.js" />
+    <Content Include="Content\Scripts\ShortUrlSpecs\urlModelCollectionSpec.js" />
     <Content Include="Content\Scripts\ShortUrlSpecs\urlModelIntegrationSpec.js" />
     <Content Include="Content\Scripts\ShortUrl\index.js" />
     <Content Include="Content\Scripts\ShortUrl\mainForm.js" />
